iox_query_influxql/src/plan/snapshots/iox_query_influxql__plan__planner__tests__select_raw__field_matching_rules-3.snap
---
source: iox_query_influxql/src/plan/planner.rs
expression: "plan(\"SELECT MixedCase FROM data\")"
---
EmptyRelation [iox::measurement:Dictionary(Int32, Utf8)]
