iox_query_influxql/src/plan/snapshots/iox_query_influxql__plan__planner__tests__select_raw__measurement_doesnt_exist.snap
---
source: iox_query_influxql/src/plan/planner.rs
expression: "plan(\"SELECT f64_field FROM data_1\")"
---
EmptyRelation [iox::measurement:Dictionary(Int32, Utf8)]
