iox_query_influxql/src/plan/snapshots/iox_query_influxql__plan__planner__tests__select_raw__mixture_of_existing_and_missing_fields-2.snap
---
source: iox_query_influxql/src/plan/planner.rs
expression: "plan(\"SELECT foo, missing FROM data\")"
---
EmptyRelation [iox::measurement:Dictionary(Int32, Utf8)]
